--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,12 @@
   }
 }
 
+@media (min-width: 801px) {
+  .menu-icon {
+    display: none;
+  }
+}
+
 .header-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -602,6 +608,122 @@
   .story {
     margin-bottom: 3rem;
     max-width: 300px !important;
+  }
+}
+
+.footer-container {
+  padding: 3rem 10vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+  color: #fff;
+  min-height: 300px;
+}
+
+.footer-container .left-side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+}
+
+.footer-container .footer-logo-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1rem;
+}
+
+.footer-container .footer-logo {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-container .right-side {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer-container .logo-text {
+  margin-left: 0.5em;
+  font-size: 1.3em;
+}
+
+.footer-container .nav {
+  list-style: none;
+}
+
+.footer-container .footer-nav-link {
+  margin-top: .5rem;
+}
+
+.footer-container .copyright {
+  margin-top: 1rem;
+}
+
+@media (max-width: 955px) {
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .right-side {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    max-width: 800px !important;
+    margin: 0;
+  }
+  .footer-header {
+    margin-top: 1.5rem !important;
+  }
+  .left-side {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 537px) {
+  .right-side {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=style.css.map */
