--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,6 +53,11 @@
     display: none;
   }
 }
+@media (min-width: 801px) {
+  .menu-icon{
+    display: none;
+  }
+}
 
 .header-container {
   display: flex;
@@ -419,5 +424,80 @@
   .story{
     margin-bottom: 3rem;
     max-width: 300px !important;
+  }
+}
+.footer-container{
+  padding: 3rem 10vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background:  linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+  color: #fff;
+  min-height: 300px;
+
+  .left-side{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 500px;
+  }
+
+  .footer-logo-section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .footer-logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .right-side{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .logo-text {
+    margin-left: 0.5em;
+    font-size: 1.3em;
+  }
+  .nav {
+    list-style: none;
+  }
+
+  .footer-nav-link {
+    margin-top: .5rem;
+  }
+  .copyright{
+    margin-top: 1rem;
+  }
+}
+@media (max-width: 955px) {
+  .footer-container{
+    flex-direction: column;
+    align-items: flex-start;
+    
+  }
+  .right-side{
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 800px !important;
+    margin: 0;
+  }
+  .footer-header{
+    margin-top: 1.5rem !important;
+  }
+  .left-side{
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 537px) {
+  .right-side{
+    flex-direction: column;
   }
 }
