--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,7 @@
 }
 
 .section1 .section1-services .services {
-  max-width: 1000px;
+  max-width: 1400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -223,24 +223,25 @@
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 2rem;
-  -ms-flex-item-align: center;
-      align-self: center;
+  margin: 0 auto 2rem auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .section1 .section1-services .services .services-items {
-  max-width: 240px;
+  max-width: 340px;
   padding: 1.5rem;
   background: rgba(255, 255, 255, 0.205);
   border-radius: 1rem;
-  margin-left: 2rem;
-  -webkit-box-shadow: 10px 10px 10px #e5e9f666;
-          box-shadow: 10px 10px 10px #e5e9f666;
+  -webkit-box-shadow: 5px 5px 10px 10px #e5e9f666;
+          box-shadow: 5px 5px 10px 10px #e5e9f666;
+  margin: 1rem;
 }
 
 .section1 .section1-services .services .services-items img {
   max-width: 50%;
-  height: 50%;
+  max-height: 50%;
   margin-bottom: 0.7rem;
 }
 
@@ -254,23 +255,12 @@
   opacity: 0.5;
 }
 
-.section1 .section1-services .services .firstchild {
-  margin-left: 2rem;
-  margin-bottom: 2rem;
-}
-
 .section1 .section1-services button {
   padding: 0.7rem 2rem;
   border-radius: 2rem;
   color: #458ff6;
   background-color: #fff;
   border-color: #458ff6;
-}
-
-@media (max-width: 1020px) {
-  .secondchild {
-    margin-bottom: 2rem;
-  }
 }
 
 .section2 {
