--- a/styles/style.scss
+++ b/styles/style.scss
@@ -147,25 +147,25 @@
     align-items: center;
 
     .services {
-      max-width: 1000px;
+      max-width: 1400px;
       display: flex;
       flex-direction: row;
       justify-content: center;
       flex-wrap: wrap;
-      margin-bottom: 2rem;
-      align-self: center;
+      margin: 0 auto 2rem auto;
+      align-items: center;
+
 
       .services-items {
-        max-width: 240px;
+        max-width: 340px;
         padding: 1.5rem;
         background: rgba(255, 255, 255, 0.205);
         border-radius: 1rem;
-        margin-left: 2rem;
-        box-shadow: 10px 10px 10px #e5e9f666;
-
+        box-shadow: 5px 5px 10px 10px #e5e9f666;
+        margin: 1rem;
         img {
           max-width: 50%;
-          height: 50%;
+          max-height: 50%;
           margin-bottom: 0.7rem;
         }
 
@@ -179,10 +179,6 @@
           opacity: 0.5;
         }
       }
-      .firstchild {
-        margin-left: 2rem;
-        margin-bottom: 2rem;
-      }
     }
     button {
       padding: 0.7rem 2rem;
@@ -193,11 +189,7 @@
     }
   }
 }
-@media (max-width: 1020px) {
-  .secondchild {
-    margin-bottom: 2rem;
-  }
-}
+
 
 .section2 {
   max-width: 1400px;
