--- a/styles/style.css
+++ b/styles/style.css
@@ -784,4 +784,25 @@
             flex-direction: column;
   }
 }
+
+.author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  padding-top: 3rem;
+  color: black;
+}
+
+.author-name {
+  margin-left: .5rem;
+}
 /*# sourceMappingURL=style.css.map */
