--- a/styles/style.css
+++ b/styles/style.css
@@ -79,13 +79,13 @@
     display: none;
   }
   .navbar-container {
-    padding: .5rem 2vw 2em 2vw;
+    padding: 1rem 5vw 2rem 5vw;
   }
 }
 
 @media (min-width: 801px) {
   .menu-icon {
-    display: none;
+    display: none !important;
   }
 }
 
@@ -444,7 +444,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 4rem 1.5rem;
-  background: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
+  background: linear-gradient(208.18deg, #67c3f3 9.05%, #5a98f2 76.74%);
   border-radius: 24px;
   margin: 0 auto;
 }
@@ -617,14 +617,14 @@
 }
 
 .articles .story-title {
-  font-size: .9rem;
+  font-size: 0.9rem;
   margin: 0 0 1rem 0;
   padding: 0 1rem;
 }
 
 .articles .story-subtitle {
   opacity: 0.5;
-  font-size: .9rem;
+  font-size: 0.9rem;
   margin-bottom: 1rem;
   padding: 0 1rem;
 }
@@ -686,7 +686,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+  background: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
   color: #fff;
   min-height: 300px;
 }
@@ -741,14 +741,14 @@
 }
 
 .footer-container .footer-nav-link {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 .footer-container .copyright {
   margin-top: 1rem;
 }
 
-@media (max-width: 955px) {
+@media (max-width: 1372px) {
   .footer-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -778,33 +778,15 @@
   }
 }
 
-@media (max-width: 537px) {
+@media (max-width: 838px) {
   .footer-right-side {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-}
-
-.author {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-  padding-top: 3rem;
-  color: black;
-}
-
-.author-name {
-  margin-left: .5rem;
+  .footer-container {
+    padding: 3rem 5vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
