--- a/styles/style.scss
+++ b/styles/style.scss
@@ -52,13 +52,13 @@
   .nav-link {
     display: none;
   }
-  .navbar-container{
-    padding: .5rem 2vw 2em 2vw;
+  .navbar-container {
+    padding: 1rem 5vw 2rem 5vw;
   }
 }
 @media (min-width: 801px) {
-  .menu-icon{
-    display: none;
+  .menu-icon {
+    display: none !important;
   }
 }
 
@@ -155,7 +155,6 @@
       margin: 0 auto 2rem auto;
       align-items: center;
 
-
       .services-items {
         max-width: 340px;
         padding: 1.5rem;
@@ -190,7 +189,6 @@
   }
 }
 
-
 .section2 {
   max-width: 1400px;
   display: flex;
@@ -204,18 +202,18 @@
     width: 50%;
     max-width: 350px;
     margin-top: 3rem;
-  
+
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
-  
+
     p {
       font-size: 1.1rem;
       margin-bottom: 2rem;
       opacity: 0.5;
     }
-  
+
     button {
       display: flex;
       flex-direction: row;
@@ -247,7 +245,7 @@
   .section2 {
     flex-direction: column;
   }
-  
+
   .section-right {
     text-align: center;
     margin-bottom: 2rem;
@@ -272,18 +270,18 @@
     width: 50%;
     max-width: 350px;
     margin-top: 3rem;
-  
+
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
-  
+
     p {
       font-size: 1.1rem;
       margin-bottom: 2rem;
       opacity: 0.5;
     }
-  
+
     button {
       max-width: 350px;
       display: flex;
@@ -295,7 +293,7 @@
       background-color: #ffffff;
       border-color: #458ff6;
     }
-  
+
     .download-icon {
       margin-left: 0.5rem;
       align-self: center;
@@ -306,7 +304,7 @@
   .section3 {
     flex-direction: column-reverse;
   }
-  button{
+  button {
     margin: 0 auto;
   }
 }
@@ -317,7 +315,7 @@
   flex-direction: column;
   align-items: center;
   padding: 4rem 1.5rem;
-  background: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
+  background: linear-gradient(208.18deg, #67c3f3 9.05%, #5a98f2 76.74%);
   border-radius: 24px;
   margin: 0 auto;
 
@@ -388,7 +386,7 @@
   }
 }
 @media (max-width: 1103px) {
-  .reviews{
+  .reviews {
     border-radius: 0;
   }
 }
@@ -412,14 +410,13 @@
     justify-content: space-between;
     margin-top: 3rem;
   }
-  .story{
+  .story {
     max-width: 30%;
     box-shadow: 5px 5px 10px 10px #e5e9f666;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    
   }
-  .story-text{
+  .story-text {
     max-width: 850px;
     height: 400px;
     background-color: rgba(255, 255, 255, 0.205);
@@ -433,15 +430,15 @@
     border-top-right-radius: 1rem;
   }
 
-  .story-title{
-    font-size: .9rem;
+  .story-title {
+    font-size: 0.9rem;
     margin: 0 0 1rem 0;
     padding: 0 1rem;
   }
 
   .story-subtitle {
     opacity: 0.5;
-    font-size: .9rem;
+    font-size: 0.9rem;
     margin-bottom: 1rem;
     padding: 0 1rem;
   }
@@ -454,7 +451,7 @@
   .read-more-icon {
     margin-left: 0.5rem;
   }
-  .view-btn{
+  .view-btn {
     margin-top: 3rem;
     padding: 0.7rem 2rem;
     border-radius: 2rem;
@@ -463,40 +460,40 @@
     border-color: #458ff6;
   }
 }
-@media (max-width:710px) {
-  .article-header{
+@media (max-width: 710px) {
+  .article-header {
     text-align: center;
   }
-  .story-list{
+  .story-list {
     flex-direction: column !important;
     align-items: center;
   }
-  .story{
+  .story {
     margin-bottom: 3rem;
     max-width: 300px !important;
   }
-  .story-text{
+  .story-text {
     height: 390px !important;
   }
 }
-.footer-container{
+.footer-container {
   padding: 3rem 10vw;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background:  linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+  background: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
   color: #fff;
   min-height: 300px;
 
-  .footer-left-side{
+  .footer-left-side {
     display: flex;
     flex-direction: column;
     width: 100%;
     max-width: 500px;
   }
 
-  .footer-logo-section{
+  .footer-logo-section {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -507,7 +504,7 @@
     height: 40px;
   }
 
-  .footer-right-side{
+  .footer-right-side {
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -522,47 +519,38 @@
   }
 
   .footer-nav-link {
-    margin-top: .5rem;
+    margin-top: 0.5rem;
   }
-  .copyright{
+  .copyright {
     margin-top: 1rem;
   }
 }
-@media (max-width: 955px) {
-  .footer-container{
+@media (max-width: 1372px) {
+  .footer-container {
     flex-direction: column;
     align-items: flex-start;
-    
   }
-  .footer-right-side{
+  .footer-right-side {
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
     max-width: 800px !important;
     margin: 0;
   }
-  .footer-header{
+  .footer-header {
     margin-top: 1.5rem !important;
   }
-  .footer-left-side{
+  .footer-left-side {
     width: 100%;
     margin: 0 auto;
   }
 }
-@media (max-width: 537px) {
-  .footer-right-side{
+@media (max-width: 838px) {
+  .footer-right-side {
     flex-direction: column;
   }
+  .footer-container{
+    padding: 3rem 5vw;
+  }
 }
-.author{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-self: center;
-  padding-top: 3rem;
-  color: black;
-}
-.author-name{
-  margin-left: .5rem;
 
-}
